--- a/web/resources/css/member.css
+++ b/web/resources/css/member.css
@@ -752,7 +752,7 @@ Version: 1.0
 }
 /* --------------------- User Profile DashBoard -------------------------------------  */
 .user-profile-dashboard-header-layout{
-   background-color: #216db1;
+    background-color: #216db1;
     padding: 1px 15px;
 }
 .user-profile-dashboard-header{
@@ -853,10 +853,9 @@ Version: 1.0
 .featured-ad-label{
     font-family: "tw-cen-mt";
     font-weight: normal;
-    color: #216db1;
-    font-size: 20px;
+    color: #2672b7;
+    font-size: 16px;
     font-weight: normal;
-    margin-top: 5px;
 }
 .featured-ad-paragraph{
     font-family: "tw-cen-mt";
@@ -880,13 +879,13 @@ Version: 1.0
 }
 /* --------------------- Upload Profile -------------------------------------  */
 .upload-profile-heading{
-   font-family: "tw-cen-mt";
+    font-family: "tw-cen-mt";
     font-size: 28px;
     color: #216db1;
 }
 /* --------------------- Profile Verification -------------------------------------  */
 .profile-verification-heading{
-   font-family: "tw-cen-mt";
+    font-family: "tw-cen-mt";
     font-size: 28px;
     color: #216db1;
 }
