--- a/web/resources/css/common.css
+++ b/web/resources/css/common.css
@@ -22,7 +22,7 @@ body{
 }
 h1,h2,h3,h4,h5,h6{
     font-family: "tw-cen-mt"!important;
-    color: #216db1;
+    color: #484848;
     margin-top: 5px!important;
     margin-bottom: 5px!important;
     line-height: 150%;
