--- a/web/templates/public/footer.html
+++ b/web/templates/public/footer.html
@@ -4,7 +4,7 @@
             <div class="col-xs-12 col-sm-6 col-md-offset-1 col-md-2 col-lg-offset-1 col-lg-2 form-group" >
                 <h2 class="landing-page-footer-top-section-header">QUICKLINKS</h2>
                 <ul class="landing-page-footer-top-section-ul">
-                    <li><a>About</a></li>
+                    <li><a (click)="goToAbout($event)">About</a></li>
                     <li><a>Buy and Sell</a></li>
                     <li><a>Find Out</a></li>
                     <li><a>Search</a></li>
@@ -92,5 +92,3 @@
         </div>
     </div> 
 </div>
-</body>
-</html>
