--- a/web/templates/public/footer.html
+++ b/web/templates/public/footer.html
@@ -6,8 +6,7 @@
                 <ul class="landing-page-footer-top-section-ul">
                     <li><a (click)="goToTerms($event)">Terms</a></li>
                     <li><a (click)="goToPrivacyPolicy($event)">Privacy Policy</a></li>
-                    <li><a>Find Out</a></li>
-                    <li><a>Search</a></li>
+                    <li><a (click)="goToContactus($event)">Contact</a></li>
                 </ul>
             </div>
             <div class="col-xs-12 col-sm-6 col-md-2 col-lg-2 form-group" >
