--- a/web/templates/public/header.html
+++ b/web/templates/public/header.html
@@ -22,7 +22,7 @@
                                         <li><a href="">Home </a> <span class="header-menu-tag">|</span></li>
                                         <li><a href="">Search </a> <span class="header-menu-tag">|</span></li>
                                         <li><a href="">About </a> <span class="header-menu-tag">|</span></li>
-                                        <li><a href="">Contact </a> <span class="header-menu-tag">|</span></li>
+                                        <li><a (click)="goToContactus($event)">Contact</a><span class="header-menu-tag">|</span></li>
                                     </ul>
                                 </div>
                             </div>
