add facebook extended access token permission and facebook config file

--- a/web/templates/public/header.html
+++ b/web/templates/public/header.html
@@ -32,7 +32,7 @@
                 <div class="row">
                     <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
                         <ul class="social-icons">
-                            <li><a href="https://www.facebook.com/dialog/oauth?client_id=648645175170513&redirect_uri=http%3A%2F%2Flocalhost%3A8080%2FFlatAuction%2FSocialAuthServlet&scope=email%2Cuser_hometown%2Cpublish_actions%2Cuser_likes%2Cuser_status%2Cuser_about_me%2Cuser_location%2Cuser_birthday%2Cuser_photos%2Cuser_posts%2Cuser_friends%2Cuser_relationship_details%2Cuser_games_activity%2Cuser_relationships"> <img id="logo" src="resources/images/facebook.png" class="img-responsive" alt="facebook"></a></li>
+                            <li><a href="SocialAuthServlet?request=SIGN_IN"> <img id="logo" src="resources/images/facebook.png" class="img-responsive" alt="facebook"></a></li>
                             <li><a> <img id="logo" src="resources/images/google-plus.png" class="img-responsive" alt="google-plus"></a></li>
                             <li><a> <img id="logo" src="resources/images/twitter.png" class="img-responsive" alt="twitter"></a></li>
                         </ul>
