member footer pages are linked

--- a/web/templates/member/footer.html
+++ b/web/templates/member/footer.html
@@ -4,10 +4,9 @@
             <div class="col-xs-12 col-sm-6 col-md-offset-1 col-md-2 col-lg-offset-1 col-lg-2 form-group" >
                 <h2 class="landing-page-footer-top-section-header">QUICKLINKS</h2>
                 <ul class="landing-page-footer-top-section-ul">
-                    <li><a>About</a></li>
-                    <li><a>Buy and Sell</a></li>
-                    <li><a>Find Out</a></li>
-                    <li><a>Search</a></li>
+                    <li><a (click)="goToTerms($event)">Terms</a></li>
+                    <li><a (click)="goToPrivacyPolicy($event)">Privacy Policy</a></li>
+                    <li><a (click)="goToContactus($event)">Contact</a></li>
                 </ul>
             </div>
             <div class="col-xs-12 col-sm-6 col-md-2 col-lg-2 form-group" >
