--- a/web/templates/public/footer.html
+++ b/web/templates/public/footer.html
@@ -7,9 +7,10 @@
                     <li><a (click)="goToTerms($event)">Terms</a></li>
                     <li><a (click)="goToPrivacyPolicy($event)">Privacy Policy</a></li>
                     <li><a (click)="goToContactus($event)">Contact</a></li>
+                    <li><a (click)="goToFaq($event)">FAQ</a></li>
                 </ul>
             </div>
-            <div class="col-xs-12 col-sm-6 col-md-2 col-lg-2 form-group" >
+<!--            <div class="col-xs-12 col-sm-6 col-md-2 col-lg-2 form-group" >
                 <h2 class="landing-page-footer-top-section-header">PROCESS</h2>
                 <ul class="landing-page-footer-top-section-ul">
                     <li><a>Prices</a></li>
@@ -37,7 +38,7 @@
                     <li><a>Aceptance</a></li>
                     <li><a>Cool Deals</a></li>
                 </ul>
-            </div>
+            </div>-->
             <div class="col-xs-12 col-sm-6 col-md-2 col-lg-2 form-group" >
                 <h2 class="landing-page-footer-top-section-header">CONTACT</h2>
                 <ul class="landing-page-footer-top-section-ul">
