--- a/web/templates/public/header.html
+++ b/web/templates/public/header.html
@@ -2,7 +2,7 @@
     <div class="container">
         <div class="row">
             <div class="col-xs-12 col-sm-4 col-md-5 col-lg-6">
-                <a href="index.jsp"><img id="logo" src="resources/images/logo.png" class="img-responsive" alt="Logo"> </a>
+                <a (click)="goToLanding($event)"><img id="logo" src="resources/images/logo.png" class="img-responsive" alt="Logo"> </a>
             </div>
             <div class="col-xs-12 col-sm-8 col-md-7 col-lg-6">
                 <div class="row">
@@ -19,9 +19,9 @@
                                 </div>
                                 <div class="collapse navbar-collapse" id="header-navbar-collapse">
                                     <ul class="nav navbar-nav">
-                                        <li><a href="">Home </a> <span class="header-menu-tag">|</span></li>
-                                        <li><a href="">Search </a> <span class="header-menu-tag">|</span></li>
-                                        <li><a href="">About </a> <span class="header-menu-tag">|</span></li>
+                                        <li><a (click)="goToLanding($event)">Home </a> <span class="header-menu-tag">|</span></li>
+                                        <li><a (click)="goToSearch($event)">Search </a> <span class="header-menu-tag">|</span></li>
+                                        <li><a (click)="goToAboutus($event)">About </a> <span class="header-menu-tag">|</span></li>
                                         <li><a (click)="goToContactus($event)">Contact</a><span class="header-menu-tag">|</span></li>
                                     </ul>
                                 </div>
