--- a/web/resources/css/member.css
+++ b/web/resources/css/member.css
@@ -70,6 +70,11 @@ Version: 1.0
     background-color: #f68521!important;
     background-image: none!important;
 }
+.header-menu-layout .member-dropdown-menu li a{
+    background-color: red!important;
+    color: #484848!important;
+}
+
 /*  Search Box  */
 
 .header-search-input-field{
@@ -104,7 +109,7 @@ Version: 1.0
     cursor: pointer;
 }
 .dropdown-img button img{
-    max-width: 40px;
+    max-width: 30px;
     background: #f77320;
     border-radius: 50%;
     float: right;
@@ -114,6 +119,7 @@ Version: 1.0
     left: auto;
     right: 0;
     border-radius: 0;
+
 }
 .dropdown-img-custom-button{
     background: none;
@@ -123,14 +129,17 @@ Version: 1.0
     background: none;
     border: none;
 }
-.dropdown-img.open > .dropdown-menu > li:hover{
-    background-color: #00deb6!important;
+.dropdown-img.open > .dropdown-menu > li > a{
+    color: #484848!important;
+    background-color: #fff!important;
     background-image: none!important;
+    width: 100%;
 }
 .dropdown-img.open > .dropdown-menu > li > a:hover{
     color: #fff!important;
-    background-color: #206BAF!important;
+    background-color: #F68521!important;
     background-image: none!important;
+    width: 100%;
 }
 
 
@@ -190,10 +199,14 @@ Version: 1.0
         padding: 15px 22px;
     }
     .dropdown-img-custom-button{
-        margin-top: 40px;
+        margin-top: 10px;
+        margin-left: 10px;
     }
     .dropdown-img.open > .dropdown-menu{
-        top: 58px;
+        top: 50px;
+    }
+    .float-right{
+        float: right;
     }
     .header-navbar-container-fluid-adjust{
         margin-left: -30px!important;  
@@ -230,10 +243,14 @@ Version: 1.0
         padding: 15px 40px;
     }
     .dropdown-img-custom-button{
-        margin-top: 45px;
+        margin-top: 10px;
+        margin-left: 20px;
     }
     .dropdown-img.open > .dropdown-menu{
-        top: 58px;
+        top: 50px;
+    }
+    .float-right{
+        float: right;
     }
     .header-navbar-container-fluid-adjust{
         margin-left: -30px!important;  
@@ -274,10 +291,13 @@ Version: 1.0
     }
     .dropdown-img-custom-button{
         padding: 8px 15px;
-        margin-top: 36px;
+        margin-top: 2px;
     }
     .dropdown-img.open > .dropdown-menu{
-        top: 83px;
+        top: 50px;
+    }
+    .float-right{
+        float: right;
     }
     .header-navbar-container-fluid-adjust{
         margin-left: -30px!important;  
@@ -525,7 +545,7 @@ Version: 1.0
     margin-top: 25px;
 }
 .dashboard-box-option-layout{
-    border: 2px solid #216db1;
+    /*border: 2px solid #216db1;*/
     text-align: center;
     padding: 25px;
 }
