--- a/web/templates/member/header.html
+++ b/web/templates/member/header.html
@@ -1,26 +1,52 @@
 <header>
-    <div  class="header-white-bg">
+    <div  class="header-white-bg margin-top-bottom-10px">
         <div  class="container">
             <div class="row">
-                <div class="col-xs-6 col-sm-6 col-md-3 col-lg-3 form-group">
+                <div class="col-xs-12 col-sm-3 col-md-4 col-lg-5">
                     <a (click)="myhome($event)">
-                        <img id="rm-site-logo" src="resources/images/logo.png" class="img-responsive header-logo" alt="Logo">
+                        <img id="logo" src="resources/images/logo.png" class="img-responsive header-logo" alt="Logo">
                     </a>
                 </div>
-                <div class="col-xs-6 col-sm-6 col-md-offset-6 col-md-3 col-lg-offset-6 col-lg-3 pull-right">
-                    <div class="dropdown dropdown-img">
-                        <button class="dropdown-img-custom-button dropdown-toggle  pull-right" type="button" id="dropdownMenuMember" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-                            <img class="img-responsive" src="resources/images/member_icon.png">
-                        </button>
-                        <ul class="dropdown-menu" aria-labelledby="dropdownMenuMember">
-                            <li><a (click)="dashboard($event)">Dashboard</a></li>
-                            <li><a (click)="myads($event)">Manage Adverts</a></li>
-                            <li><a (click)="inbox($event)">Messages</a></li>
-                            <li><a (click)="notifications($event)">Account</a></li>
-                            <li><a (click)="myprofile($event)">Profile</a></li>
-                            <li><a (click)="basicsearch($event)">Search</a></li>
-                            <li><a (click)="logout($event)">Logout</a></li>
-                        </ul>
+                <div class="col-xs-12 col-sm-9 col-md-8 col-lg-7">
+                    <div class="row">
+                        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                            <nav class="navbar navbar-default header-menu-layout">
+                                <div class="container-fluid">
+                                    <div class="navbar-header">
+                                        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#header-navbar-collapse" aria-expanded="false">
+                                            <span class="sr-only">Toggle navigation</span>
+                                            <span class="icon-bar"></span>
+                                            <span class="icon-bar"></span>
+                                            <span class="icon-bar"></span>
+                                        </button>
+                                    </div>
+                                    <div class="collapse navbar-collapse" id="header-navbar-collapse">
+                                        <ul class="nav navbar-nav">
+                                            <li><a (click)="myhome($event)">Home </a> <span class="header-menu-tag">|</span></li>
+                                            <li><a (click)="goToSearch($event)">Search </a> <span class="header-menu-tag">|</span></li>
+                                            <li><a (click)="goToAboutus($event)">About </a> <span class="header-menu-tag">|</span></li>
+                                            <li><a (click)="goToContactus($event)">Contact</a> <span class="header-menu-tag">|</span></li>
+                                            <li> 
+                                                    <div class="dropdown dropdown-img">
+                                                        <button class="dropdown-img-custom-button dropdown-toggle float-right" type="button" id="dropdownMenuMember" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+                                                            <img class="img-responsive" src="resources/images/member_icon.png">
+                                                        </button>
+                                                        <ul class="dropdown-menu member-dropdown-menu" aria-labelledby="dropdownMenuMember">
+                                                            <li><a (click)="dashboard($event)">Dashboard</a></li>
+                                                            <li><a (click)="myads($event)">Manage Adverts</a></li>
+                                                            <li><a (click)="inbox($event)">Messages</a></li>
+                                                            <li><a (click)="notifications($event)">Account</a></li>
+                                                            <li><a (click)="myprofile($event)">Profile</a></li>
+                                                            <li><a (click)="basicsearch($event)">Search</a></li>
+                                                            <li><a (click)="logout($event)">Logout</a></li>
+                                                        </ul>
+                                                    </div>
+                                                </li>
+                                        </ul>
+                                    </div>
+                                </div>
+                            </nav>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -32,7 +58,6 @@
                 <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
                     <nav class="navbar navbar-default header-custom-navbar">
                         <div class="container-fluid header-navbar-container-fluid-adjust">
-                            <!-- Brand and toggle get grouped for better mobile display -->
                             <div class="navbar-header">
                                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#member-header" aria-expanded="false">
                                     <span class="sr-only">Toggle navigation</span>
