--- a/web/templates/member/header.html
+++ b/web/templates/member/header.html
@@ -3,7 +3,7 @@
         <div  class="container">
             <div class="row">
                 <div class="col-xs-12 col-sm-3 col-md-4 col-lg-5">
-                    <a (click)="myhome($event)">
+                    <a (click)="goToMyhome($event)">
                         <img id="logo" src="resources/images/logo.png" class="img-responsive header-logo" alt="Logo">
                     </a>
                 </div>
@@ -22,8 +22,8 @@
                                     </div>
                                     <div class="collapse navbar-collapse" id="header-navbar-collapse">
                                         <ul class="nav navbar-nav">
-                                            <li><a (click)="myhome($event)">Home </a> <span class="header-menu-tag">|</span></li>
-                                            <li><a (click)="goToSearch($event)">Search </a> <span class="header-menu-tag">|</span></li>
+                                            <li><a (click)="goToMyhome($event)">Home </a> <span class="header-menu-tag">|</span></li>
+                                            <li><a (click)="basicsearch($event)">Search </a> <span class="header-menu-tag">|</span></li>
                                             <li><a (click)="goToAboutus($event)">About </a> <span class="header-menu-tag">|</span></li>
                                             <li><a (click)="goToContactus($event)">Contact</a> <span class="header-menu-tag">|</span></li>
                                             <li> 
@@ -68,13 +68,48 @@
                             </div>
 
                             <div class="collapse navbar-collapse" id="member-header">
-                                <ul class="nav navbar-nav header-custom-nav">
-                                    <li class="active"><a (click)="dashboard($event)">Dashboard</a></li>
-                                    <li><a (click)="myads($event)">Manage Adverts</a></li>
-                                    <li><a (click)="inbox($event)">Messages</a></li>
-                                    <li><a (click)="notifications($event)">Account</a></li>
-                                    <li><a (click)="myprofile($event)">Profile</a></li>
-                                    <li><a (click)="basicsearch($event)">Search</a></li>
+                                <ul class="nav navbar-nav header-custom-nav">                                    
+                                    <li class="active" *ngIf="dashboardSelected == true" >
+                                        <a (click)="dashboard($event)">Dashboard</a>
+                                    </li>
+                                    <li *ngIf="dashboardSelected == false" >
+                                        <a (click)="dashboard($event)">Dashboard</a>
+                                    </li>
+                                    
+                                    <li class="active" *ngIf="myadsSelected == true">
+                                        <a (click)="myads($event)">Manage Adverts</a>
+                                    </li>
+                                    <li *ngIf="myadsSelected == false">
+                                        <a (click)="myads($event)">Manage Adverts</a>
+                                    </li>
+                                    
+                                    <li class="active" *ngIf="inboxSelected == true">
+                                        <a (click)="inbox($event)">Messages</a>
+                                    </li>
+                                    <li *ngIf="inboxSelected == false">
+                                        <a (click)="inbox($event)">Messages</a>
+                                    </li>
+                                    
+                                    <li class="active" *ngIf="notificationSelected == true">
+                                        <a (click)="notifications($event)">Account</a>
+                                    </li>
+                                    <li *ngIf="notificationSelected == false">
+                                        <a (click)="notifications($event)">Account</a>
+                                    </li>
+                                    
+                                    <li class="active" *ngIf="profileSelected == true">
+                                        <a (click)="myprofile($event)">Profile</a>
+                                    </li>
+                                    <li *ngIf="profileSelected == false">
+                                        <a (click)="myprofile($event)">Profile</a>
+                                    </li>
+                                    
+                                    <li class="active" *ngIf="basicSearchSelected == true">
+                                        <a (click)="basicsearch($event)">Search</a>
+                                    </li>
+                                    <li *ngIf="basicSearchSelected == false">
+                                        <a (click)="basicsearch($event)">Search</a>
+                                    </li>
                                 </ul>
                             </div>
                         </div>
