--- a/web/resources/css/nonmember.css
+++ b/web/resources/css/nonmember.css
@@ -8,7 +8,7 @@ Version: 1.0
     .sign-up-anchor{
         float: right;
     }
-   
+
 }
 
 /* --------------------- Tablet Device -------------------------------------  */
@@ -109,6 +109,28 @@ Version: 1.0
     font-style: italic;
     margin-top: 5px;
 }
+.facebook-button{
+    font-family: "tw-cen-mt";
+    height: 42px;
+    color: #fff;
+    background: #4568b2;
+    padding: 6px 12px;
+    margin-bottom: 0;
+    font-size: 16px;
+    font-weight: bold;
+    line-height: 150%;
+    text-align: center;
+    cursor: pointer;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    border: 1px solid transparent;
+    border-radius: 0px;
+    background-image: none;
+    font-weight: bold;
+}
+
 /* --------------------- Registration Box -------------------------------------  */
 
 .signup-pagelet{
