--- a/web/templates/public/header.html
+++ b/web/templates/public/header.html
@@ -1,10 +1,10 @@
 <header class="margin-top-bottom-10px">
     <div class="container">
         <div class="row">
-            <div class="col-xs-12 col-sm-4 col-md-5 col-lg-6">
+            <div class="col-xs-12 col-sm-3 col-md-4 col-lg-5">
                 <a (click)="goToLanding($event)"><img id="logo" src="resources/images/logo.png" class="img-responsive" alt="Logo"> </a>
             </div>
-            <div class="col-xs-12 col-sm-8 col-md-7 col-lg-6">
+            <div class="col-xs-12 col-sm-9 col-md-8 col-lg-7">
                 <div class="row">
                     <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
                         <nav class="navbar navbar-default header-menu-layout">
@@ -23,6 +23,7 @@
                                         <li><a (click)="goToSearch($event)">Search </a> <span class="header-menu-tag">|</span></li>
                                         <li><a (click)="goToAboutus($event)">About </a> <span class="header-menu-tag">|</span></li>
                                         <li><a (click)="goToContactus($event)">Contact</a><span class="header-menu-tag">|</span></li>
+                                        <li><a href="#login">Login</a><span class="header-menu-tag">|</span></li>
                                     </ul>
                                 </div>
                             </div>
