closing products at landing and home page

--- a/web/templates/public/header.html
+++ b/web/templates/public/header.html
@@ -23,7 +23,7 @@
                                         <li><a (click)="goToSearch($event)">Search </a> <span class="header-menu-tag">|</span></li>
                                         <li><a (click)="goToAboutus($event)">About </a> <span class="header-menu-tag">|</span></li>
                                         <li><a (click)="goToContactus($event)">Contact</a><span class="header-menu-tag">|</span></li>
-                                        <li><a href="#login">Login</a><span class="header-menu-tag">|</span></li>
+                                        <li><a (click)="goToLogin($event)">Login</a><span class="header-menu-tag">|</span></li>
                                     </ul>
                                 </div>
                             </div>
