--- a/web/templates/public/footer.html
+++ b/web/templates/public/footer.html
@@ -6,6 +6,7 @@
                 <ul class="landing-page-footer-top-section-ul">
                     <li><a (click)="goToTerms($event)">Terms</a></li>
                     <li><a (click)="goToPrivacyPolicy($event)">Privacy Policy</a></li>
+                    <li><a (click)="goToAboutus($event)">About</a></li>
                     <li><a (click)="goToContactus($event)">Contact</a></li>
                     <li><a (click)="goToFaq($event)">FAQ</a></li>
                 </ul>
