--- a/web/resources/css/nonmember.css
+++ b/web/resources/css/nonmember.css
@@ -34,6 +34,18 @@ Version: 1.0
         margin-top: 6px;
     }
 }
+html, body {
+    height: 100%;
+    margin: 0;
+}
+.wrapper {
+    min-height: 100%;
+    margin-bottom: -320px;
+}
+.footer,
+.push {
+    height: 320px;
+}
 /* --------------------- Login Box -------------------------------------  */
 
 .login-pagelet{
