--- a/web/resources/css/admin.css
+++ b/web/resources/css/admin.css
@@ -3,52 +3,74 @@ Theme Name: Flat Auction
 Athour: A.LK.M. Nazmul Islam
 Version: 1.0
 */
-@font-face {
-    font-family: 'effra-medium';
-    src: url('../fonts/Effra_W_Md.eot');
-    src: url('../fonts/Effra_W_Mdd41d.eot?#iefix') format('embedded-opentype'), 
-        url('../fonts/Effra_W_Md.woff') format('woff'), 
-        url('../fonts/Effra_Md.ttf') format('truetype');
-    font-style: normal
+
+/* --------------------- Mobile Device -------------------------------------  */
+@media (max-width : 767px) {
+    .header-bg{
+        height: 96px
+    }
+    .header-title{
+        float: left;
+        margin-left: 8px;
+    }
+
 }
-@font-face {
-    font-family: 'effra-regular';
-    src: url('../fonts/Effra_W_Rg.eot');
-    src: url('../fonts/Effra_W_Rgd41d.eot?#iefix') format('embedded-opentype'), 
-        url('../fonts/Effra_W_Rg.woff') format('woff'), 
-        url('../fonts/Effra_Md.ttf') format('truetype');
-    font-style: normal
+
+/* --------------------- Tablet Device -------------------------------------  */
+@media (min-width : 768px) and (max-width : 991px) {
+    .header-bg{
+        height: 96px
+    }
+    .header-title{
+        float: left;
+        margin-left: 8px;
+    }
+
 }
-body{
-    font-family: 'effra-regular';
-    background-color: #F5F5F5;
-    color: #484848;
+/* --------------------- Medium Device -------------------------------------  */
+@media (min-width : 992px) and (max-width : 1199px) {
+    .header-bg{
+        height: 50px
+    }
+    .header-title{
+        float: right;
+    }
+    .container-fluid-adjust{
+        margin-left: -15px!important;  
+        margin-right: 0px!important;  
+    }
 }
-h1,h2,h3,h4,h5,h6{
-    font-family: 'effra-medium';
-    color: #484848;
-    line-height: 150%;
+/* --------------------- Large Device -------------------------------------  */
+@media (min-width : 1200px) {
+    .header-bg{
+        height: 50px
+    }
+    .header-title{
+        float: right;
+    }
+    .container-fluid-adjust{
+        margin-left: -15px!important;  
+        margin-right: 0px!important;  
+    }
 }
-.margin-top-5px{
-    margin-top: 5px;
-}
+
 /* ---------------------------- Header -------------------------------- */
 
 .header-bg{
     background-color: #fff; 
 }
 .globalHeader-logo.globalHeader-logo--rebranded {
-    height: 24px;
+    height: 60px;
     width: auto;
     margin-left: 10px;
     margin-top: 12px;
 }
 .header-title{
-    font-family: 'effra-medium';
-    color: #00deb6;
-    font-size: 24px;
-    line-height: 1em;
-    margin-top: 12px;
+    font-family: "tw-cen-mt";
+    color: #f06226!important;  
+    font-size: 32px!important;  
+    line-height: 1em!important;  
+    margin-top: 12px!important;
 }
 /* ---------------------------- Footer -------------------------------- */
 .footer-bg{
@@ -82,7 +104,7 @@ h1,h2,h3,h4,h5,h6{
     border: 1px solid #00deb6;
 }
 .common-custom-button{
-    font-family: 'effra-regular';
+    font-family: "tw-cen-mt";
     background-color: #00deb6;
     border: 1px solid #00deb6;
     color: #fff;
@@ -103,7 +125,7 @@ h1,h2,h3,h4,h5,h6{
     font-weight: normal;
     padding: 6px 12px;
     width: 100%;
-    font-family: "Open Sans",Arial,sans-serif;
+    font-family: "tw-cen-mt";
     -webkit-appearance: none;
 }
 .large-button:focus {
@@ -134,11 +156,11 @@ tr:hover {
     cursor: pointer;
 }
 .dropdown-menu>li>a,.dropdown-menu>li>a:focus{
-    font-family: 'effra-regular';
+    font-family: "tw-cen-mt";
     color: #484848!important;
 }
 .dropdown-menu>li>a:hover{
-    font-family: 'effra-regular';
+    font-family: "tw-cen-mt";
     background-color: #00deb6!important;
     color: #fff!important;
 }
@@ -270,51 +292,20 @@ input[type=checkbox]:checked {
 .radio.radio-inline {
     margin-top: 0; }
 
-/* --------------------- Mobile Device -------------------------------------  */
-@media (max-width : 767px) {
-    .header-bg{
-        height: 96px
-    }
-    .header-title{
-        float: left;
-        margin-left: 8px;
-    }
-}
 
-/* --------------------- Tablet Device -------------------------------------  */
-@media (min-width : 768px) and (max-width : 991px) {
-    .header-bg{
-        height: 96px
-    }
-    .header-title{
-        float: left;
-        margin-left: 8px;
-    }
-}
-/* --------------------- Medium Device -------------------------------------  */
-@media (min-width : 992px) and (max-width : 1199px) {
-    .header-bg{
-        height: 50px
-    }
-    .header-title{
-        float: right;
-    }
-}
-/* --------------------- Large Device -------------------------------------  */
-@media only screen and (min-width : 1200px) {
-    .header-bg{
-        height: 50px
-    }
-    .header-title{
-        float: right;
-    }
-}
 /* -------------------------------- Common ----------------------------- */
-.container-fluid-adjust{
-    margin-left: -15px!important;  
-    margin-right: 0px!important;  
+.margin-top-25px{
+    margin-top: 25px;
 }
-
+.admin-common-table tr:hover{
+    color: #484848;
+}
+.heading{
+    font-family: "tw-cen-mt";
+    font-size: 28px;
+    color: #216db1;
+    margin-top: 10px !important;
+}
 
 /* -------------------------------- left menu ----------------------------- */
 .left-menu-anchor{
@@ -329,18 +320,18 @@ input[type=checkbox]:checked {
     line-height: 26px;
     font-weight: normal !important;
 }
-.custom-panel{
+.admin-custom-panel{
     cursor: pointer; 
     border-radius: 0!important; 
     margin-bottom: -6px!important;
     width: 100%;
 }
-.custom-panel-heading{
+.admin-custom-panel-heading{
     padding: 8px!important; 
     background-color: #F3F3F3!important;
     border-radius: 0!important; 
 }
-/*.panel-default > .custom-panel-heading{
+/*.panel-default > .admin-custom-panel-heading{
     padding: 8px!important; 
     background-color: #222D32!important;
     border-radius: 0!important; 
@@ -351,13 +342,15 @@ input[type=checkbox]:checked {
     margin: 0;
 }
 .left-menu-unorder-list a li{
+    width: 100%;
     background-color: #fff; 
     padding: 8px;
-    border-bottom: 1px solid whitesmoke;
+    border-bottom: 1px solid #ccc;
 }
 
 .left-menu-unorder-list a li:hover{
-    background-color: #00deb6;
+    width: 100%;
+    background-color: #f06226;
     color: #fff;
     padding: 8px;
     cursor: pointer;
@@ -377,4 +370,134 @@ input[type=checkbox]:checked {
 .left-panel-navbar-default{
     background-color: #fff!important;
     border: 1px solid #fff!important;
+}
+.admin-custom-panel{
+    border-radius: 0px!important;
+    border: 1px solid #216db1!important;
+    border-top-left-radius: 0px!important;
+    border-top-right-radius: 0px!important;
+}
+.admin-custom-panel ul li{
+    margin-right: 5px!important;
+}
+.admin-custom-panel-heading{
+    padding: 0px!important;
+    border-bottom: 1px solid #216db1!important;
+}
+.panel-primary > .admin-custom-panel-heading{
+    font-family: "tw-cen-mt";
+    background-image: linear-gradient(to bottom,#ffffff 0,#ffffff 100%);
+    color: #484848;
+    border-top-left-radius: 0px!important;
+    border-top-right-radius: 0px!important;
+}
+.admin-custom-panel-body{
+    background-color: #E9E9EB!important;
+}
+/* --------------------- Login Box -------------------------------------  */
+
+.login-pagelet{
+    margin-bottom: 1px;
+    -webkit-box-shadow: 0px 2px 3px 0px rgba(0,0,0,0.2);
+    -moz-box-shadow: 0px 2px 3px 0px rgba(0,0,0,0.2);
+    box-shadow: 0px 2px 3px 0px rgba(0,0,0,0.2);
+}
+.pagelet_divider{
+    background-color: #ebc27f;
+    margin-top: 15px;
+    margin-bottom: 15px;
+}
+.login-block {
+    width: 100%;
+    padding: 1px 20px;
+    background: #ebc27f;
+    border-radius: 5px;
+    margin: 0 auto;
+}
+.login-facebook-button{
+    font-family: "tw-cen-mt";
+    background-color: #4568b2;
+    border: 1px solid #4568b2;
+    color: #fff;
+    border-radius: 0px;
+    padding: 6px 12px;
+    font-size: 16px;
+    line-height: 20px;
+    font-weight: bold;
+}
+.login-facebook-button:focus{
+    border: 1px solid #4568b2 !important;
+}
+.login-block h1 {
+    font-family: "tw-cen-mt";
+    color: #4568b2!important;
+    font-size: 28px!important;
+    font-weight: bold!important;
+    margin-bottom: 0px!important;
+}
+
+.login-block input {
+    width: 100%;
+    height: 42px;
+    box-sizing: border-box;
+    border-radius: 6px!important
+        border: 1px solid #ccc;
+    margin-bottom: 20px;
+    font-size: 16px;
+    font-family: "tw-cen-mt";
+    padding: 0 20px 0 50px!important;
+    outline: none;
+}
+
+.login-block input#username {
+    background: #fff url('../images/user.png') 20px top no-repeat;
+    background-size: 16px 80px;
+}
+
+.login-block input#password {
+    background: #fff url('../images/password.png') 20px top no-repeat;
+    background-size: 16px 80px;
+}
+
+.login-block input:active, .login-block input:focus {
+    border: 1px solid #ff656c;
+}
+
+.password-forgotten-anchor{
+    font-family: "tw-cen-mt";
+    font-size: 16px;
+    font-style: italic;
+    margin-top: 5px;
+}
+
+/* --------------------- Product List -------------------------------------  */
+.product-title{
+    font-size: 16px;
+    font-family: "tw-cen-mt";
+    color: #484848;
+    line-height: 1.5em;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    font-weight: normal;
+}
+.price-title{
+    font-family: "tw-cen-mt";
+    color: #216db1;
+}
+.price-amount{
+    font-family: "tw-cen-mt";
+    color: #f68521;
+    font-size: 16px;
+    margin-top: -2px;
+}
+.option-links i{
+    color: #216db1;
+    font-size: 14px;
+}
+.option-links .option{
+    font-family: "tw-cen-mt";
+    color: #f68521;
+    font-size: 13px;
+    display: inline;
 }
