--- a/web/resources/css/common.css
+++ b/web/resources/css/common.css
@@ -200,6 +200,21 @@ a{
     background: url("../images/bg.jpg") no-repeat scroll 0 0;
     background-size:100% 100%
 }
+.auction-time {
+    font-family: "tw-cen-mt";
+    background: none repeat scroll 0 0 #e7721b;
+    opacity: 0.5;
+    color: #fff;
+    height: 40px;
+    left: 0px;
+    line-height: 40px;
+    overflow: hidden;
+    position: absolute;
+    font-size: 16px;
+    width: 100%;
+    font-weight: normal;
+}
+
 /* --------------------- Landing Page & member Home Search Box -------------------------------------  */
 
 .landing-page-search-box-layout > typeahead-container > ul{
@@ -651,7 +666,9 @@ input[type=checkbox]:checked {
     .search-login-top-bottom-margin{
         margin: 30px 0;
     }
-
+    .auction-time {
+        bottom: 130px;
+    }
 }
 
 /* --------------------- Tablet Device -------------------------------------  */
@@ -726,7 +743,9 @@ input[type=checkbox]:checked {
     .landing-page-search-box-layout > typeahead-container > ul > li > a{
         width: 327px;
     }
-
+.auction-time {
+        bottom: 80px;
+    }
 }
 /* --------------------- Medium Device -------------------------------------  */
 @media (min-width : 992px) and (max-width : 1199px) {
@@ -796,6 +815,9 @@ input[type=checkbox]:checked {
     .non-member-search-input{
         margin-left: -34px;
     }
+    .auction-time {
+        bottom: 80px;
+    }
 }
 /* --------------------- Large Device -------------------------------------  */
 @media only screen and (min-width : 1200px) {
@@ -863,6 +885,9 @@ input[type=checkbox]:checked {
     }
     .non-member-search-input{
         margin-left: -34px;
+    }
+    .auction-time {
+        bottom: 80px;
     }
 }
 
