--- a/web/templates/member/footer.html
+++ b/web/templates/member/footer.html
@@ -88,7 +88,7 @@
     <div class="footer-border">
         <div class="container">
             <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-                Room Auction UK 2017
+                RoomBidRent UK 2017
             </div>
         </div>
     </div> 
