--- a/web/resources/css/member.css
+++ b/web/resources/css/member.css
@@ -153,12 +153,12 @@ html, body {
     width: 100%;
 }
 
-.modal-header-bg,.modal-footer-bg{
+/*.modal-header-bg,.modal-footer-bg{
     background-color: #F68521;
 }
 .modal-body-text{
     color: #216db1;
-}
+}*/
 /* --------------------- Mobile Device -------------------------------------  */
 @media (max-width : 767px) {
     .search-box-layout-bg{
