--- a/web/resources/css/common.css
+++ b/web/resources/css/common.css
@@ -963,7 +963,10 @@ input[type=checkbox]:checked {
     text-transform: uppercase;
     text-align: center;
     padding: 5px;
-    font-size: 18px;
+    font-size: 14px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
     font-weight: normal;
     margin-top: 0px;
 }
