--- a/web/resources/css/nonmember.css
+++ b/web/resources/css/nonmember.css
@@ -182,7 +182,7 @@ html, body {
     margin-bottom: 20px!important;
 }
 
-.signup-block input {
+.signup-block .input-custom-field {
     width: 100%;
     height: 42px;
     box-sizing: border-box;
@@ -195,7 +195,7 @@ html, body {
     outline: none;
 }
 
-.signup-block input#username {
+/*.signup-block input#username {
     background: #fff url('../images/user.png') 20px top no-repeat;
     background-size: 16px 80px;
 }
@@ -213,11 +213,12 @@ html, body {
 .signup-block input#password:focus {
     background: #fff url('../images/password.png') 20px bottom no-repeat;
     background-size: 16px 80px;
-}
+}*/
 
 .signup-block input:active, .login-block input:focus {
     border: 1px solid #ff656c;
 }
+
 
 
 /* --------------------- Landing Page -------------------------------------  */
