--- a/web/resources/css/common.css
+++ b/web/resources/css/common.css
@@ -1971,3 +1971,17 @@ input[type=checkbox]:checked {
     font-size: 16px;
     font-weight: normal;
 }
+
+/* --------------------- Image Size -------------------------------------  */
+.image150x150{
+    width: 150px;
+    height: 150px;
+}
+.image150x100{
+    width: 150px;
+    height: 100px;
+}
+.image80x50{
+    width: 80px;
+    height: 50px;
+}
