--- a/web/resources/css/member.css
+++ b/web/resources/css/member.css
@@ -622,6 +622,12 @@ html, body {
     line-height: 1.2em;
     font-weight: normal;
     margin-top: -5px;
+    display: -webkit-box;
+    height: 6.0em;
+    -webkit-line-clamp: 5;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis
 }
 .saved-ads-product-price-title,.saved-ads-product-id-title{
     font-family: "tw-cen-mt";
@@ -665,6 +671,12 @@ html, body {
     line-height: 1.2em;
     font-weight: normal;
     margin-top: -5px;
+    display: -webkit-box;
+    height: 6.0em;
+    -webkit-line-clamp: 5;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis
 }
 .my-ads-product-price-title,.my-ads-product-id-title{
     font-family: "tw-cen-mt";
